# libiff

./: COPYING  Makefile.am  README.md  configure.ac  release.nix
doc/: Makefile.am
doc/man/: Makefile.am  iffjoin.1  iffpp.1
src/: Doxyfile  Makefile.am  libiff.pc.in  libiff.sln
src/iffcheck/: Makefile.am  check.c  check.h  main.c
src/iffjoin/: Makefile.am  iffjoin.vcxproj  iffjoin.vcxproj.filters  join.c  join.h  main.c
src/iffpp/: Makefile.am  iffpp.vcxproj  iffpp.vcxproj.filters  main.c  pp.c  pp.h
src/libiff/: Makefile.am  array.c  array.h  attributepath.c  attributepath.h  cat.c  cat.h  chunk.c  chunk.h  chunkregistry.c  chunkregistry.h  datachunk.c  datachunk.h  defaultregistry.c  defaultregistry.h  error.c  error.h  extension.c  extension.h  extensionchunk.c  extensionchunk.h  field.c  field.h  form.c  form.h  formregistry.c  formregistry.h  group.c  group.h  groupstructure.c  groupstructure.h  id.c  id.h  iff.c  iff.h  iffcore.c  iffcore.h  ifftypes.h.in  io.c  io.h  (+13 more)
src/libiffcheck/: Makefile.am  check.c  check.h  checkinterface.c  checkinterface.h
src/libiffcore/: Makefile.am  array.c  array.h  attributepath.h  chunk.c  chunk.h  chunkregistry.c  chunkregistry.h  chunksarray.c  chunksarray.h  field.c  field.h  id.c  id.h  iffcore.c  iffcore.h  ifftypes.h.in  io.c  io.h  libiff.def  pointerarray.c  pointerarray.h  registry.c  registry.h  structure.c  structure.h  value.c  value.h
src/libiffpp/: Makefile.am  pp.c  pp.h  ppinterface.c  ppinterface.h
tests/: Makefile.am  bye.c  bye.h  catcrudoperations.c  catdata.c  catdata.h  checkextension.c  conversation.c  conversation.h  extension-otherform.TEST  extensioncrudoperations.c  extensiondata-extended.c  extensiondata-extended.h  extensiondata-truncated.c  extensiondata-truncated.h  extensiondata-truncated2.c  extensiondata-truncated2.h  extensiondata.c  extensiondata.h  extensiondata2.c  extensiondata2.h  formcrudoperations.c  formdata-pad.c  formdata-pad.h  formdata.c  formdata.h  hello.c  hello.h  invalid.IFF  invalidcat-contentstype.TEST  invalidcat-contentstype.sh  invalidcat-prop.TEST  invalidcat-prop.sh  invalidcat-raw.TEST  invalidcat-raw.sh  invalidcat-size.TEST  invalidcat-size.sh  invalidform-prop.TEST  invalidform-prop.sh  invalidform-size1.TEST  (+101 more)
