lib_LTLIBRARIES = libiff.la
pkginclude_HEADERS = io.h id.h chunkregistry.h chunk.h group.h cat.h form.h list.h prop.h rawchunk.h textchunk.h field.h util.h error.h iffcore.h iff.h defaultregistry.h attributepath.h ifftypes.h
libiff_la_SOURCES = io.c id.c chunkregistry.c chunk.c group.c cat.c form.c list.c prop.c rawchunk.c textchunk.c field.c util.c error.c iffcore.c iff.c defaultregistry.c attributepath.c
