lib_LTLIBRARIES = libiff.la
pkginclude_HEADERS = array.h group.h cat.h form.h list.h prop.h rawchunk.h textchunk.h iff.h defaultregistry.h

libiff_la_SOURCES = array.c group.c cat.c form.c list.c prop.c rawchunk.c textchunk.c iff.c defaultregistry.c
libiff_la_CFLAGS = -I../libiffcore
libiff_la_LIBADD = ../libiffcore/libiffcore.la
