lib_LTLIBRARIES = libiffcore.la
pkginclude_HEADERS = io.h id.h value.h array.h pointerarray.h registry.h chunk.h chunksarray.h field.h util.h error.h iffcore.h attributepath.h
libiffcore_la_SOURCES = io.c id.c value.c array.c pointerarray.c registry.c chunk.c chunksarray.c field.c util.c error.c iffcore.c attributepath.c
