lib_LTLIBRARIES = libiffcore.la
pkginclude_HEADERS = io.h id.h value.h field.h array.h pointerarray.h structure.h registry.h chunk.h chunksarray.h util.h error.h iffcore.h attributepath.h
libiffcore_la_SOURCES = io.c id.c value.c field.c array.c pointerarray.c structure.c registry.c chunk.c chunksarray.c util.c error.c iffcore.c attributepath.c
